error messge when ANT_OPTS is not set